--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <textarea id="input-admin"></textarea>
 
     <button id="submit-data">Submit-data</button>
-    <button id="empty-table">Empty-table</button>
+    <button id="empty-table">empty-table</button>
   </body>
 </html>
