--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
           <td>use1</td>
           <td>email1</td>
           <td>ad1</td>
-          <td><input type="checkbox" /></td>
+          <td>-</td>
         </tr>
 
         <tr>
           <td>use2</td>
           <td>email2</td>
           <td>ad2</td>
-          <td><input type="checkbox" /></td>
+          <td>X</td>
         </tr>
         <tr>
           <td>use3</td>
           <td>email3</td>
           <td>ad3</td>
-          <td><input type="checkbox" /></td>
+          <td>-</td>
         </tr>
       </tbody>
     </table>
@@ -52,7 +52,7 @@
     <textarea id="input-username"></textarea>
     <textarea id="input-email"></textarea>
     <textarea id="input-address"></textarea>
-    <textarea id="input-admin"></textarea>
+    <input type="checkbox" id="input-admin" name="Admin" value="Admin" />
 
     <button id="submit-data">Submit-data</button>
     <button id="empty-table">empty-table</button>
