--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
   <body>
     <div id="app"></div>
-
-    <script src="src/index.js defer"></script>
+    
+  <script src="src/index.js" defer>
+    </script>
+    
     <style>
       table,
       th,
